fix: infobox hidden behind content

--- a/src/pages/Projects/Projects.module.css
+++ b/src/pages/Projects/Projects.module.css
@@ -5,6 +5,8 @@
 		grid-template-columns: 1fr 1fr 1fr;
 		grid-column-gap: 10vw;
 		height: 100%;
+		z-index: -1;
+		position: relative;
 	}
 
 	.centerContainer {
